--- a/package.json
+++ b/package.json
@@ -2,15 +2,15 @@
   "name": "mystoreapp",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "shoppingServer.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node shoppingServer.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "pg": "^8.11.3"
+    "express": "^4.18.2"
   }
 }
